syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message characterBreak_toS {
    required int32 CharacterID  = 1;
}

message characterBreak_toC {}
