syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

import "cs/proto/message/common.proto";

message drawCardDraw_toS {
    optional int32 libID            = 1;
    optional int32 drawCount        = 2; // 1 || 10
}

message drawCardDraw_toC {
    optional int32 libID = 1;
    optional int32 guaranteeID = 2;
    optional int32 guaranteeCount = 3;
    repeated drawCardAward awardList = 4;
}



message drawCardAward {
    optional AwardInfo awardInfo = 1;
    optional int32  state      = 2; // 0新获取 1已存在（已经存在同名武器、角色ID存在转换成碎片） 2 角色满命座（转成另一种碎片）
    optional int64  timestamp  = 3;
}
